[gd_scene load_steps=8 format=3 uid="uid://cuc6kdwjoycnp"]

[ext_resource type="Script" uid="uid://dsq2187bsmne0" path="res://Scripts/UI/SaveSlotsSelector.gd" id="1_tniih"]
[ext_resource type="Shader" uid="uid://c3jvwedxdm2k2" path="res://Shaders/UIBackgroundShader.gdshader" id="2_kn3yl"]
[ext_resource type="PackedScene" uid="uid://dajhetili8wxi" path="res://Scenes/UI/CustomButtonNew.tscn" id="4_1sc53"]

[sub_resource type="Environment" id="Environment_kv8h2"]
background_mode = 1
background_color = Color(0.05, 0.05, 0.08, 1)

[sub_resource type="Gradient" id="Gradient_bitcoin"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.3, 0.7, 1)
colors = PackedColorArray(0.02, 0.02, 0.05, 1, 0.05, 0.05, 0.08, 1, 0.08, 0.08, 0.12, 1, 0.12, 0.08, 0.02, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bg"]
gradient = SubResource("Gradient_bitcoin")
fill = 1
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_network"]
shader = ExtResource("2_kn3yl")
shader_parameter/time = 0.0
shader_parameter/speed = 1.2
shader_parameter/density = 0.6
shader_parameter/node_color = Color(1, 0.6, 0, 0.12)
shader_parameter/connection_color = Color(0.2, 0.5, 1, 0.08)

[node name="SaveSlotsSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_tniih")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kv8h2")

[node name="Background" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GradientBG" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_bg")

[node name="NetworkLayer" type="ColorRect" parent="Background"]
material = SubResource("ShaderMaterial_network")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AnimationTimer" type="Timer" parent="Background"]
wait_time = 0.05
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_font_sizes/font_size = 48
text = "Select Save Slot"
horizontal_alignment = 1

[node name="SlotsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_constants/separation = 30
alignment = 1

[node name="SlotButton1" parent="MarginContainer/VBoxContainer/SlotsContainer" instance=ExtResource("4_1sc53")]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 160)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Slot 1
[New Game]"

[node name="SlotButton2" parent="MarginContainer/VBoxContainer/SlotsContainer" instance=ExtResource("4_1sc53")]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 160)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Slot 2"

[node name="SlotButton3" parent="MarginContainer/VBoxContainer/SlotsContainer" instance=ExtResource("4_1sc53")]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 160)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Slot 3"

[node name="BackButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_1sc53")]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.9, 0.9, 1)
theme_override_colors/font_color = Color(0.8, 0.8, 0.85, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "‚Üê Back to Menu"

[connection signal="timeout" from="Background/AnimationTimer" to="." method="_on_animation_timer_timeout"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SlotsContainer/SlotButton1" to="." method="_on_slot_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SlotsContainer/SlotButton2" to="." method="_on_slot_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SlotsContainer/SlotButton3" to="." method="_on_slot_button_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
